name:                algorithms
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/algorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib 
                     , ArrayInversion
                     , QuicksortCounting
                     , MinCuts
                     , SCCs
                     , Heap
                     , LeftistHeap
                     , Dijkstra
                     , Queue
                     , LQueue
                     , MedianMaintenance
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , containers >= 0.5.7.1
                     , random >= 1.1
                     , parsec >= 3.1.11
                     , PSQueue >= 1.1
  default-language:    Haskell2010

executable algorithms-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , algorithms
                     , vector
                     , vector-algorithms
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

test-suite algorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/algorithms
